--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <!--don't change the title -->
         <link rel="stylesheet" type="text/css" href="C:\Users\conta\OneDrive\Documents\Mon site !\style.css">
         <title>La vie c'est la danse</title>
-        <link rel="shortcut icon" id="icone_danse" type="image/x-icon" href="C:\Users\conta\OneDrive\Documents\Mon site !\Images\danseuse.jpg">
+        <link rel="shortcut icon" id="icone_danse" type="image/x-icon" href="danseuse.jpg">
     </head>
     <body> 
         <video autoplay muted loop id="danseuse">
