--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body> 
         <video autoplay muted loop id="danseuse">
-            <source src="C:\Users\conta\OneDrive\Documents\Mon site !\danseuse.2.mp4">
+            <source src="danseuse.2.mp4">
         </video>
         <div id="overlay"></div>
         <div id="content">
@@ -50,7 +50,7 @@ Dansez n’importe où, n’importe quand. Seul ou accompagné et sentez-vous li
             <li><h3>Le Modern Jazz</h3> 
             <p>Cette danse est basée sur un travail rythmique et technique. Elle offre une certaine fluidité et une grande liberté dans ses mouvements. Cependant, malgré la grande liberté des déplacements sur scène, elle possède de la technique et des codes, comme les autres danses.Elle se caractérise qussi par des sauts, des pirouettes et des chutes. Voilà un exemple de Modern Jazz :<br>
             <a href="https://www.youtube.com/watch?v=b2CwvGzQlno">https://www.youtube.com/watch?v=b2CwvGzQlno</a> </p> </li>
-            <img src="C:\Users\conta\OneDrive\Documents\Mon site !\Images\Danse_modern_jazz.jpg">
+            <img src="Danse_modern_jazz.jpg">
 
             <li><h3>Le Hip Hop</h3> 
             <p></p> </li>
