--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <!--don't change the title -->
-        <link rel="stylesheet" type="text/css" href="https://github.com/mathilde-dauphoud/La-danse-c-est-la-vie-/blob/main/style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>La vie c'est la danse</title>
         <link rel="shortcut icon" id="icone_danse" type="image/x-icon" href="danseuse.jpg">
     </head>
