--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ Dansez n’importe où, n’importe quand. Seul ou accompagné et sentez-vous li
         <h2>Quels sont les différents styles de danse 
         ?</h2>
         <ul>
-            <li><a href="C:\Users\conta\OneDrive\Documents\Mon site !\danse_classique.html"> <h3>Le Classique</h3></a> 
+            <li><a href="danse_classique.html"> <h3>Le Classique</h3></a> 
                 
-            <a href="C:\Users\conta\OneDrive\Documents\Mon site !\danse_classique.html"> <img src="C:\Users\conta\OneDrive\Documents\Mon site !\Images\Danse classique.jpg"></a>
+            <a href="danse_classique.html"> <img src="Danse classique.jpg"></a>
             
             <li><h3>Le Modern Jazz</h3> 
             <p>Cette danse est basée sur un travail rythmique et technique. Elle offre une certaine fluidité et une grande liberté dans ses mouvements. Cependant, malgré la grande liberté des déplacements sur scène, elle possède de la technique et des codes, comme les autres danses.Elle se caractérise qussi par des sauts, des pirouettes et des chutes. Voilà un exemple de Modern Jazz :<br>
