essaie pour corriger images

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ Dansez n’importe où, n’importe quand. Seul ou accompagné et sentez-vous li
         <ul>
             <li><a href="danse_classique.html"> <h3>Le Classique</h3></a> 
                 
-            <a href="danse_classique.html"> <img src="Danse classique.jpg"></a>
+            <a href="danse_classique.html"> <img src="Images/Danse classique.jpg" alt="image de danse classique" ></a>
             
             <li><h3>Le Modern Jazz</h3> 
             <p>Cette danse est basée sur un travail rythmique et technique. Elle offre une certaine fluidité et une grande liberté dans ses mouvements. Cependant, malgré la grande liberté des déplacements sur scène, elle possède de la technique et des codes, comme les autres danses.Elle se caractérise qussi par des sauts, des pirouettes et des chutes. Voilà un exemple de Modern Jazz :<br>
             <a href="https://www.youtube.com/watch?v=b2CwvGzQlno">https://www.youtube.com/watch?v=b2CwvGzQlno</a> </p> </li>
-            <img src="Danse_modern_jazz.jpg">
+            <img src="Images/Danse_modern_jazz.jpg">
 
             <li><h3>Le Hip Hop</h3> 
             <p></p> </li>
