--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <!--don't change the title -->
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="C:\Users\conta\OneDrive\Documents\Mon site !\style.css">
         <title>La vie c'est la danse</title>
-        <link rel="shortcut icon" id="icone_danse" type="image/x-icon" href="Images/danseuse.jpg">
+        <link rel="shortcut icon" id="icone_danse" type="image/x-icon" href="C:\Users\conta\OneDrive\Documents\Mon site !\Images\danseuse.jpg">
     </head>
     <body> 
         <video autoplay muted loop id="danseuse">
-            <source src="danseuse.2.mp4">
+            <source src="C:\Users\conta\OneDrive\Documents\Mon site !\danseuse.2.mp4">
         </video>
         <div id="overlay"></div>
         <div id="content">
-        <h1>La Danse</h1>
+        <h1 id="titleOfMyPage">La Danse</h1>
         <hr>
         <h2>Qu'est ce que la danse ?</h2>
         <p>La danse est une forme d'art vivant. C'est un mode d'expression éphémère constitué de séquences de mouvements de corps dans l'espace souvent accompagnés par de la musique.</p>
@@ -43,14 +43,14 @@ Dansez n’importe où, n’importe quand. Seul ou accompagné et sentez-vous li
         <h2>Quels sont les différents styles de danse 
         ?</h2>
         <ul>
-            <li><a href="danse_classique.html"> <h3>Le Classique</h3></a> 
+            <li><a href="C:\Users\conta\OneDrive\Documents\Mon site !\danse_classique.html"> <h3>Le Classique</h3></a> 
                 
-            <a href="danse_classique.html"> <img src="Images/Danse classique.jpg" alt="image de danse classique" ></a>
+            <a href="C:\Users\conta\OneDrive\Documents\Mon site !\danse_classique.html"> <img src="C:\Users\conta\OneDrive\Documents\Mon site !\Images\Danse classique.jpg"></a>
             
             <li><h3>Le Modern Jazz</h3> 
             <p>Cette danse est basée sur un travail rythmique et technique. Elle offre une certaine fluidité et une grande liberté dans ses mouvements. Cependant, malgré la grande liberté des déplacements sur scène, elle possède de la technique et des codes, comme les autres danses.Elle se caractérise qussi par des sauts, des pirouettes et des chutes. Voilà un exemple de Modern Jazz :<br>
             <a href="https://www.youtube.com/watch?v=b2CwvGzQlno">https://www.youtube.com/watch?v=b2CwvGzQlno</a> </p> </li>
-            <img src="Images/Danse_modern_jazz.jpg">
+            <img src="C:\Users\conta\OneDrive\Documents\Mon site !\Images\Danse_modern_jazz.jpg">
 
             <li><h3>Le Hip Hop</h3> 
             <p></p> </li>
@@ -65,5 +65,8 @@ Dansez n’importe où, n’importe quand. Seul ou accompagné et sentez-vous li
 
 
         </ul>
+
+        <script src="script.js"></script>
+
     </body>
 </html>
