--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <!--don't change the title -->
-        <link rel="stylesheet" type="text/css" href="C:\Users\conta\OneDrive\Documents\Mon site !\style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>La vie c'est la danse</title>
         <link rel="shortcut icon" id="icone_danse" type="image/x-icon" href="Images\danseuse.jpg">
     </head>
@@ -45,7 +45,7 @@ Dansez n’importe où, n’importe quand. Seul ou accompagné et sentez-vous li
         <ul>
             <li><a href="danse_classique.html"> <h3>Le Classique</h3></a> 
                 
-            <a href="danse_classique.html"> <img src="C:\Users\conta\OneDrive\Documents\Mon site !\Images\Danse classique.jpg"></a>
+            <a href="danse_classique.html"> <img src="Images\Danse classique.jpg"></a>
             
             <li><h3>Le Modern Jazz</h3> 
             <p>Cette danse est basée sur un travail rythmique et technique. Elle offre une certaine fluidité et une grande liberté dans ses mouvements. Cependant, malgré la grande liberté des déplacements sur scène, elle possède de la technique et des codes, comme les autres danses.Elle se caractérise qussi par des sauts, des pirouettes et des chutes. Voilà un exemple de Modern Jazz :<br>
